fix date picker issue where manually inputted date overlaps with placeholder text in Date picker

--- a/packages/assets/css/rsuite-override.css
+++ b/packages/assets/css/rsuite-override.css
@@ -44,3 +44,7 @@
     border-color: inherit;
     background: inherit; */
 }
+
+.rs-picker-toggle-textbox:not(.rs-picker-toggle-read-only) + .rs-picker-toggle-value {
+    visibility: hidden;
+}
